welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: illegal start of simple pattern
var :String Msg = litMessage();
    ^BDRBuggle:2: error: '=' expected but ';' found.
var :String Msg = litMessage();
                              ^